# 251121-langchain-study

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml  settings.py  test_app6_colors.sh  test_app6_final.sh  test_app6_interactive.sh
.claude/: settings.local.json
.cursor/rules/: CODE_OF_CONDUCT.mdc
.github/workflows/: deploy-docs.yml
.taskfile/: go.yml
apps/01-one-simple-chat-invoke/: main.py  pyproject.toml
apps/01-simple-chat-invoke/: pyproject.toml
apps/02-one-simple-chat-stream/: main.py  pyproject.toml
apps/02-simple-chat-stream/: pyproject.toml
apps/03-interactive-chat-trich/: agent.py  config.py  main.py  pyproject.toml  session.py  tools.py  ui.py
apps/03-simple-langgraph-tui/: ARCHITECTURE.md  main.py  pyproject.toml
apps/04-chainlit-demo/: main.py  pyproject.toml  utils.py
apps/04-chainlit-simple/: main.py  pyproject.toml
apps/05-chainlit-tool-call/: README.md  handlers.py  main.py  pyproject.toml  tools.py
apps/06-tui-tool-call/: README.md  main.py  pyproject.toml
apps/100-simple-chat-invoke/: README.md  main.py  pyproject.toml
apps/101-simple-chat-stream/: README.md  main.py  pyproject.toml
apps/110-simple-langgraph-tui/: 03-vs-06-COMPARISON.md  CODE_COMPARISON.md  README.md  main.py  pyproject.toml
apps/120-chainlit-demo/: README.md  handlers.py  main.py  pyproject.toml
apps/130-streamlit-demo/: README.md  main.py  pyproject.toml
apps/app1/: README.md  main.py
apps/app2/: README.md  main.py
apps/app3/: README.md  main.py  pyproject.toml
apps/app4/: README.md  main.py  pyproject.toml
apps/app5/: README.md  __init__.py  __main__.py  config.py  main.py  pyproject.toml  router.py  tools.py  ui.py
apps/app6/: README.md  __init__.py  __main__.py  agent.py  config.py  main.py  pyproject.toml  router.py  session.py  tools.py  tui.py  ui.py
docs/: agents.md  index.md  package.json
docs/.vitepress/: config.ts
docs/links/: 101-simple-chat-stream.md
docs/readme/: 100-simple-chat-invoke.md  130-streamlit-demo.md  apps~100-simple-chat-invoke.md  apps~101-simple-chat-stream.md  apps~110-simple-langgraph-tui.md  apps~120-chainlit-demo.md  apps~130-streamlit-demo.md  readme-sidebar.json
docs/scripts/: collect-readmes.py
libs/m-tools/src/m_tools/: __init__.py  common.py
libs/m-utils/: pyproject.toml
libs/m-utils/src/m_utils/: __init__.py
libs/m_tools/: pyproject.toml
libs/tools/: README.md  pyproject.toml
libs/tools/src/tools/: __init__.py
scripts/: uv_workspace_members_gen.py
