[project]
name = "251121-langchain-study"
version = "0.0.13"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "chainlit>=2.9.1",
  "langchain-anthropic>=1.1.0",
  "langchain-openai>=1.0.3",
  "langgraph>=1.0.3",
  "pillow>=12.0.0",
  "prompt-toolkit>=3.0.52",
  "pydantic-settings>=2.12.0",
  "rich>=14.2.0",
  "textual>=6.6.0",
]

[tool.uv.workspace]
members = [
  "apps/01-one-simple-chat-invoke",
  "apps/02-one-simple-chat-stream",
  "apps/03-interactive-chat-trich",
  "apps/04-chainlit-demo",
  "apps/05-chainlit-tool-call",
  "apps/06-tui-tool-call",
  "libs/tools",
]
