[project]
name = "251121-langchain-study"
version = "0.0.19"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "chainlit>=2.9.1",
  "langchain-anthropic>=1.1.0",
  "langchain-openai>=1.0.3",
  "langgraph>=1.0.3",
  "m-tools",
  "m-utils",
  "pillow>=12.0.0",
  "prompt-toolkit>=3.0.52",
  "pydantic-settings>=2.12.0",
  "rich>=14.2.0",
  "streamlit>=1.51.0",
  "textual>=6.6.0",
  "tomlkit>=0.13.3",
]


[tool.uv.workspace]
members = [
  "libs/m-tools",
  "libs/m-utils",
  "apps/100-simple-chat-invoke",
  "apps/101-simple-chat-stream",
  "apps/110-simple-langgraph-tui",
  "apps/120-chainlit-demo",
  "apps/130-streamlit-demo",
]

[tool.uv.sources]
m-tools = { workspace = true }
m-utils = { workspace = true }
