[project]
name = "m-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "lwmacct", email = "lwmacct@icloud.com" }]
requires-python = ">=3.12"
dependencies = [
    "pillow>=10.0.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
