[project]
name = "m-tools"
version = "0.1.0"
description = "Common LangChain tools for workspace projects"
readme = "README.md"
authors = [{ name = "lwmacct", email = "lwmacct@icloud.com" }]
requires-python = ">=3.12"
dependencies = ["langchain-core>=1.0.0"]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
